# lia

./: .gitignore  pyproject.toml  test.py  test2.py
lia/: __init__.py  align.py
lia/align/: __init__.py  align_leaf.py  get_func.py  overlap.py  shape.py
lia/basic/: __init__.py  blackening_bg.py  check_background.py
lia/basic/evaluate/: __init__.py  _consts.py  background.py  noise.py
lia/basic/get/: __init__.py  _consts.py  area.py  bin_img.py  center_object.py  cnts.py  consts.py  diff_ellipse.py  difference.py  hsv_cnts.py  image.py  in_color_range.py  mottle_area.py  noise.py  object.py  size.py
lia/basic/transform/: __init__.py  crop.py  move.py  rotate.py  rotation.py  slide.py  to_array.py
lia/color/: __init__.py  convert.py  pickup.py  search.py
lia/core/: align.py  base.py  extract.py  graph.py  pickcell.py
lia/dataframe/: __init__.py  add.py
lia/detect/: __init__.py  detect_fvfm.py  detect_leaf.py  evaluate_noise.py  extract.py  extract_color.py  extract_leaf.py  get_center_object.py  get_cnts.py  get_diff_ellipse.py  sort_hsv_cnts.py
lia/fvfm/: __init__.py  for_graph.py  search.py  to_dataframe.py  unique_px.py
lia/graph/: __init__.py  color.py  make_graph.py
tests/: test_align.py  test_basic.py  test_core.py  test_detect.py  test_extract.py  test_fvfm.py  test_graph.py
