[tool.poetry]
name = "lia"
version = "0.1.0"
description = ""
authors = ["matsuri <matsurix28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
plotly = "^5.21.0"
pandas = "^2.2.2"
opencv-python = "^4.9.0.80"
easyocr = "^1.7.1"
torch = "2.2.2"
numpy = "1.26.4"
tenacity = "8.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
